2012-12-10 Riccardo Mottola <rm@gnu.org>

	* DiffTextView.m
        Use proper accessors and not private ivars.

2012-12-10 Riccardo Mottola <rm@gnu.org>

	* DiffWrapper.h
	* DiffWrapper.m
        Transform tasktest into a method and use variables for binary paths.

2012-12-05 Riccardo Mottola <rm@gnu.org>

	* DiffWrapper.m
	* DiffWindowController.m
	* DiffMiddleView.m
	* AppController.m
	* DiffWrapper.m
	Replace GS memory macros with standard code.

2012-12-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* DiffWindowController.m (_patchMutableString:): Fix off by one
	errors.
	* DiffWrapper.m (initWithFilename:andFilename:): Fix
	initialization of line range arrays.

2012-12-02  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* AppController.h:
	* AppController.m:
	* DiffWindowController.m:
	* Resources/main.gorm:
	Add support for other version control systems besides CVS.
	Currently, this includes subversion, git, mercurial and darcs.

2012-08-10 Riccardo Mottola <rm@gnu.org>

	* DiffWrapper.m:
	Rewrite code to work with multi-char line endings.

2012-08-09 Riccardo Mottola <rm@gnu.org>

	* DiffWrapper.m:
	Clean up unsigned transition.

2012-08-08 Riccardo Mottola <rm@gnu.org>

	* FileIconView.h:
	use extern instead of APPKIT_EXPORT

2012-08-08 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* DiffWrapper.m
	switch unsigned ints to NSUInteger to prevent compilation warning

2012-08-06 Riccardo Mottola <rm@gnu.org>

	* DiffFileChooser.h
	* DiffFileChooser.m
	Setters for left and right filenames.

	* AppController.h
	* Resources/main.gorm
	* AppController.m
	Expose openFiles delegate and if two filenames are supplied,
	automatically open the file chooser with the filenames set.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Resources/main.gorm: Rearrange main menu, add standard edit menu
	items, and add Services menu.

	* DiffTextView.m (-initWithFrame:): Make view selectable.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* AppController.h: